--- a/src/styles/profile.css
+++ b/src/styles/profile.css
@@ -105,9 +105,10 @@ h2 {
 }
 /* Trip Drafts and Upcoming Trips */
 .trip-drafts-grid {
-  display: grid;
-  grid-template-columns: repeat(3, 1fr); /* Three columns */
-  gap: 15px; /* Item spacing */
+  display: flex;
+  flex-wrap: wrap;
+  grid-template-columns: repeat(4, 1fr); /* Three columns */
+  gap: 0px;
 }
 .upcoming-trips {
   /* display: flex; Flex container */
@@ -116,6 +117,7 @@ h2 {
   overflow-x: auto;
   color: #333;
   margin-bottom: 40px;
+  margin-right: 40px;
   padding-bottom: 20px;
   scrollbar-width: none;
   /* display: flex; */
